; ModuleID = '/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpc_ident.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpc_ident.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mpcf_strfold = common dso_local global i32 0, align 4
@free = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mpc_ident() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i32 (...) @mpc_alpha()
  %4 = call i32 (...) @mpc_underscore()
  %5 = call i32* @mpc_or(i32 2, i32 %3, i32 %4)
  store i32* %5, i32** %1, align 8
  %6 = load i32, i32* @mpcf_strfold, align 4
  %7 = call i32 (...) @mpc_alphanum()
  %8 = call i32* @mpc_many(i32 %6, i32 %7)
  store i32* %8, i32** %2, align 8
  %9 = load i32, i32* @mpcf_strfold, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* @free, align 4
  %13 = call i32* @mpc_and(i32 2, i32 %9, i32* %10, i32* %11, i32 %12)
  ret i32* %13
}

declare dso_local i32* @mpc_or(i32, i32, i32) #1

declare dso_local i32 @mpc_alpha(...) #1

declare dso_local i32 @mpc_underscore(...) #1

declare dso_local i32* @mpc_many(i32, i32) #1

declare dso_local i32 @mpc_alphanum(...) #1

declare dso_local i32* @mpc_and(i32, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
